fix: Fix grocer side Nav spacing

--- a/src/style/grocer_side/Nav.css
+++ b/src/style/grocer_side/Nav.css
@@ -5,16 +5,16 @@
     justify-content: space-between;
     flex-direction: row;
     align-items: center;
-  padding: 43px;
 }
 
-img {
-  width: 172.43px;
+.grocer_side-nav-logo {
+  padding: 42px 10px 44px 78px;
+  width: 174px;
+  height: 61px;
 }
 
 .grocer_side-nav-div_2 {
-  font-size: 18px;
-  margin-right: 90px;
+  padding: 32px 78px 10px 10px;
   color: #79BD84;
 }
 
@@ -22,9 +22,11 @@ img {
   display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 30px;
 }
 
 .grocer_side-nav-div_2 li {
+  display: inline-block;
+  padding: 10px;
+  font-size: 18px;
   list-style: none;
 }
